Use flexbox to center main element, fix gutter issue on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,5 @@
+---
+---
 $gray-lighter: #fcfcfc;
 $gray-light:   #f5f5f5;
 $gray:         #e0e0e0;
@@ -7,6 +9,8 @@ $accent:       #1874cd;
 
 $gradient1:    #2c3e50;
 $gradient2:    #4ca1af;
+
+$gutter: 1rem;
 
 html, body {
     font-family: 'Roboto', sans-serif;
@@ -28,13 +32,20 @@ h3 {
 }
 
 .container {
-    font-size: inherit;
-    position: absolute;
-    top: 50%;
-    left: 2rem;
-    right: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: fixed;
+    height: calc(100% - #{$gutter} * 2);
+    width: calc(100% - #{$gutter} * 2);
+    padding: $gutter;
+    overflow: auto;
+}
+
+.main {
+    margin: auto;
     max-width: 25rem;
-    margin: 0 auto;
     background-color: $gray-lighter;
     text-align: center;
     border-radius: 0.5rem;
@@ -46,7 +57,6 @@ h3 {
 }
 
 .header {
-    position: relative;
     font-size: 2rem;
     margin: 2rem 2rem 1rem;
 
@@ -57,7 +67,9 @@ h3 {
 }
 
 .content {
-    margin: 1rem 2rem 2rem;
+    position: relative;
+    margin: 1rem 0 2rem;
+    padding: 0 2rem;;
 
     a {
         color: $gradient2;
